test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/malformed_type_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[37]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(4)
  ;
  int
  *
  identifier(foo)
  =
  &
  identifier(a)
  ;
  int
  *
  identifier(bar)
  [
  const int(3)
  ]
  =
  (
  *
  [
  const int(3)
  ]
  )
  identifier(foo)
  ;
  return
  const int(0)
  ;
  }
